# AutoConnectCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  create_installer_x64.bat  create_installer_x86.bat  installer_x64.nsi  installer_x86.nsi
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  STYLE_GUIDE.md
src/: main.cpp  main_console.cpp
src/network/: device_registry.cpp  device_registry.h  proxy_manager.cpp  proxy_manager.h  wifi_manager.cpp  wifi_manager.h
src/ui/: app_window.slint  ui_logic.cpp  ui_logic.h
src/utils/: logger.cpp  logger.h  system_utils.cpp  system_utils.h  translations.cpp  translations.h
